Compiler/tests/good/bool6.nx
printn(1 == 0);
printn(1 != 0);
printn(1 <  0);
printn(1 <= 0);
printn(1 >  0);
printn(1 >= 0);
