Compiler/tests/bad/bool7.nx
type t = [0 .. 1];
type a : array t of t;

printn(1<2 || a);
